add readme file and tags